# vpm

./: .gitignore  README.md  docs.md  equipment-templates.csv  pyproject.toml  requirements.txt  vpm-db.db
.github/workflows/: publish.yml
data/: task-templates.csv
scripts/: compile  compile.zsh  dev-cli.zsh  publish.zsh  test.zsh
src/: api.py  cli.py  database.py  maintenance.py  models.py  vpm-cli.py  vpm.py
src/vpm/: __main__.py  api.py  cli.py  core.py  database.py  home.py  main.py  models.py  utils.py
tests/: conftest.py  test_cli.py  test_core.py  test_db.py  test_elements.py  test_home.py  test_models.py  test_room.py  test_services.py  test_tasks.py
vpm/: cli.py  db.py  elements.py  home.py  parts.py  room.py  tasks.py
vpm/config/: settings.py
vpm/database/: config.py  engine.py  init.py  triggers.py
vpm/models/: __init__.py  base.py  contacts.py  documents.py  elements.py  parts.py  picklist.py  property.py  tasks.py
vpm/services/: base.py  database.py  demo.py  elements.py  parts.py  property.py
vpm/utils/: helpers.py  logging.py
